Small last-minute tweaks

--- a/week1/index.html
+++ b/week1/index.html
@@ -157,14 +157,8 @@
 
         <div class="slide intermission"></div>
 
-        <div class="slide" style="background-image: url(img/bunge_money_direction.png);">
-            <a href="http://en.wikipedia.org/wiki/William_Bunge">Bill Bunge</a>
-        </div>
-
         <div class="slide" style="background-image: url(img/scp_les.png);">
-            <a class="source" href="http://www.notbored.org/the-scp.html">
-                Surveillance Camera Players
-            </a>
+            <a class="source" href="http://www.notbored.org/the-scp.html">Surveillance Camera Players</a>
         </div>
 
         <div class="slide" style="background-image: url(img/isee.png);">
@@ -422,9 +416,6 @@
         <div class="slide" style="background-image: url(img/google.png);">
         </div>
 
-        <div class="slide" style="background-image: url(img/foursquare_pizza.png);">
-        </div>
-
         <div class="slide" style="background-image: url(img/streetview.png);">
         </div>
 
@@ -638,12 +629,6 @@
         <div class="slide">
             <h2>AJAX</h2>
             <p>not really new, but newly articulated</p>
-        </div>
-
-        <div class="slide" style="background-image: url(img/internet_users.png);">
-            <a class="source" href="http://www.webpronews.com/the-internet-was-kind-of-terrible-in-2002-infographic-2012-08">
-                source
-            </a>
         </div>
 
         <div class="slide" style="background-image: url(img/internet-population.png);">
