--- a/week1/index.html
+++ b/week1/index.html
@@ -806,6 +806,10 @@
             <h2>Street, water and land data &rarr;</h2>
         </div>
 
+        <div class="slide" style="background-image: url(img/openwhatevermap.png);">
+            <a class="source" href="http://openwhatevermap.xyz/#3/21.94/-4.92">openwhatevermap.xyz</a>
+        </div>
+
         <div class="slide">
             <a href="http://maptime.github.io/anatomy-of-a-web-map/#45">
                 How do tiles work?
