--- a/week2/inclass.html
+++ b/week2/inclass.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>In-class Exercises | Advanced GIS</title>
-        <link href='http://fonts.googleapis.com/css?family=Arvo|Alegreya Sans' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Arvo|Alegreya Sans' rel='stylesheet' type='text/css'>
         <link href="../css/pages.css" rel="stylesheet" type="text/css" />
         <link href="../css/inclass.css" rel="stylesheet" />
     </head>
@@ -17,8 +17,8 @@
                 <ol>
                     <li>Download <a href="data/week2data.zip">today's data</a>.</li>
                     <li>Open the <a href="https://carto.com/docs/carto-engine/cartocss/">CartoCSS documentation</a>.</li>
-                    <li>Upload the <strong>earthquakes</strong> data to CARTO.</li>
-                    <li>Make a map with the earthquakes data and style the points with no aggregation.</li>
+                    <li>Upload the <strong>fires-us-viirs</strong> data to Carto. This was downloaded on January 30, 2018 from <a href="https://earthdata.nasa.gov/earth-observation-data/near-real-time/firms/viirs-i-band-active-fire-data">NASA EarthData</a>.</li>
+                    <li>Make a map with the fire data and style the points with no aggregation.</li>
                     <li>Using CartoCSS:
                         <ol>
                             <li>Make the markers 5 pixels wide.</li>
@@ -41,19 +41,21 @@
             <section>
                 <h2>Part 3: CartoCSS Attribute Conditions</h2>
                 <ol>
-                    <li>Make your markers a different color when the magnitude (<code>mag</code>) is over 5.5.</li>
+                    <li>Make your markers a different color when the column <code>bright_ti4</code> is over <code>350</code>.</li>
                 </ol>
             </section>
 
             <section>
-                <h2>Part 4: CartoCSS Variables</h2>
+                <h2>Part 4: CartoCSS ramps</h2>
                 <ol>
-                    <li>Use a variable for one of your properties.</li>
+                    <li>Use ramps to make the marker fill use <code>jenks</code>, the <code>bright_ti4</code> column, and the green-to-blue colorbrewer ramp:
+                        <pre><code>marker-fill: ramp([bright_ti4], colorbrewer(GnBu), jenks);</code></pre>
+                    </li>
                 </ol>
             </section>
 
             <footer>
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Advanced GIS</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://ebrelsford.github.io/" property="cc:attributionName" rel="cc:attributionURL">Eric Brelsford</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Advanced GIS</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://ebrelsford.github.io/" property="cc:attributionName" rel="cc:attributionURL">Eric Brelsford</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
             </footer>
         </main>
     </body>
