--- a/week2/index.html
+++ b/week2/index.html
@@ -31,8 +31,16 @@
             <a class="source" href="https://gist.github.com/gpachacz/e517a4399dd4ff61bc8afb9f30fe34d8">Gregory</a>
         </div>
 
+        <div class="slide" style="background-image: url(img/assignment-eric.png);">
+            <a class="source" href="https://gist.github.com/anonymous/a6737884796dc545f0f16bbc0ec5e78b">Eric</a>
+        </div>
+
         <div class="slide" style="background-image: url(img/assignment-adi.png);">
             <a class="source" href="https://thenewschool.carto.com/u/gilla549/builder/36fc9bfb-0648-41ca-8c8c-515311b7b91e/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B3.897138029219278%2C27.850341796875%5D%2C%22sw%22%3A%5B10.682200600084114%2C33.48632812500001%5D%2C%22center%22%3A%5B7.3025362053673275%2C30.668334960937504%5D%2C%22zoom%22%3A7%7D%2C%22widgets%22%3A%7B%2209bdf858-0901-4ff2-ad8d-663b4e51899d%22%3A%7B%22autoStyle%22%3Atrue%2C%22normalized%22%3Atrue%7D%7D%7D">Adi</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/assignment-cecilia.png);">
+            <a class="source" href="https://cdepman.carto.com/builder/a59288d5-811c-4a50-a9f8-3209b89efaf0/embed?state=%7B%22map%22%3A%7B%22ne%22%3A%5B40.46941261105147%2C-74.54635620117189%5D%2C%22sw%22%3A%5B40.94826955677518%2C-73.28842163085939%5D%2C%22center%22%3A%5B40.70927151739564%2C-73.91738891601564%5D%2C%22zoom%22%3A11%7D%7D">Cecilia</a>
         </div>
 
         <div class="slide intermission"></div>
