--- a/week4/index.html
+++ b/week4/index.html
@@ -26,6 +26,14 @@
             <p>Class 4</p>
         </div>
 
+        <div class="slide" style="background-image: url(img/assignment-ana.png);">
+            <a href="#" class="source">Ana</a>
+        </div>
+
+        <div class="slide" style="background-image: url(img/assignment-eduarda.png);">
+            <a href="https://thenewschool.carto.com/u/eduardaaun/builder/ed180540-c304-41af-920c-bef3bc59a2d4/embed" class="source">Eduarda</a>
+        </div>
+
         <div class="slide">
             <h2>making base maps</h2>
         </div>
