More week 4 assignments

--- a/week4/index.html
+++ b/week4/index.html
@@ -30,6 +30,10 @@
             <a href="#" class="source">Ana</a>
         </div>
 
+        <div class="slide" style="background-image: url(img/assignment-agnes.png);">
+            <a href="#" class="source">Agnes</a>
+        </div>
+
         <div class="slide" style="background-image: url(img/assignment-eduarda.png);">
             <a href="https://thenewschool.carto.com/u/eduardaaun/builder/ed180540-c304-41af-920c-bef3bc59a2d4/embed" class="source">Eduarda</a>
         </div>
