--- a/index.html
+++ b/index.html
@@ -127,21 +127,6 @@
                     </section>
                 </section>
 
-                <!--
-                <section>
-                    <h3>Week 4: Getting things online</h3>
-                    <section class="slides">
-                        <h4>
-                            <a href="week4">slides</a>
-                        </h4>
-                    </section>
-                    <section class="assignment">
-                        <h4>
-                            <a href="week4/assignment.html">assignment</a>
-                        </h4>
-                    </section>
-                </section>
-
                 <section>
                     <h3>Week 5: HTML</h3>
                     <section class="slides">
@@ -163,7 +148,6 @@
                     <section class="videos">
                         <h4>videos</h4>
                         <ul>
-                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
                             <li><a href="https://www.youtube.com/watch?v=eBDaEG-gxc0">CARTO: Editing HTML and CSS</a></li>
                         </ul>
                     </section>
@@ -174,6 +158,7 @@
                     </section>
                 </section>
 
+                <!--
                 <section>
                     <h3>Week 6: CSS</h3>
                     <section class="slides">
@@ -190,6 +175,12 @@
                         <h4>
                             <a href="week6/assignment.html">assignment</a>
                         </h4>
+                    </section>
+                    <section class="videos">
+                        <h4>videos</h4>
+                        <ul>
+                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
+                        </ul>
                     </section>
                 </section>
 
